# fit-company

./: .gitignore  Dockerfile  README.md  billing.Dockerfile  coach.Dockerfile  docker-compose.yml  main.py  main_billing.py  main_coach.py  main_stats.py  monolith.Dockerfile  pyproject.toml  stats.Dockerfile
adr/: 01-stack.md  02-coach-service-migration.md  03-queue-create-wod.md
bruno/: bruno.json  collection.bru  get health coach.bru  get health.bru  login jane.bru  login john.bru  test.bru
bruno/billing/: cancel subscription.bru  folder.bru  premium status.bru  status.bru  subscribe.bru  verify-premium.bru
bruno/coach-service/: create wod.bru  folder.bru  get exercices.bru  get health coach.bru
bruno/environments/: local.bru
bruno/fitness/: folder.bru  get WOD.bru  get exercices.bru  get muscle groups.bru
bruno/profile/: folder.bru  get profile.bru  onboard.bru
bruno/stats-service/: folder.bru  get health stats.bru  request user stats.bru
bruno/users/: List users.bru  bootstrap admin.bru  create admin.bru  create user.bru  generate wods.bru  get user last workout.bru  lookup user id.bru
bruno/workouts/: Perform workout.bru  (+3 more)
bruno/workouts-internal/: Create workout.bru  folder.bru  get user last workout.bru
bruno/workouts-public/: Next Workout.bru  Perform workout.bru  folder.bru
docs/: 01-students_assignment.md  02-students_assignment.md  03-students_assignment.md  04-students-project.md  fitness_database.md
k6/: README.md  wod_load_test.js
load_estimation_WOD_api/: load_test.js  test_summary.md
tests/: conftest.py  test_user_api.py
(+54 files in other folders)
